Remove /stop/<city> /real/<city> /time/<city>
