# bustw_server/route.py
@@ -50,7 +50,6 @@ def info(city, route):
         return jsonify(v1_info.main(city, route))
 
 
-@v1_api.route('/v1/stop/<city>/', defaults={'route': None}, strict_slashes=False)
 @v1_api.route('/v1/stop/<city>/<route>/', strict_slashes=False)
 def stop(city, route):
     """取得該城市符合條件的所有路線站牌資料"""
@@ -64,14 +63,12 @@ def stop(city, route):
         return jsonify(list(v1_stop.main(city, route).values()))
 
 
-@v1_api.route('/v1/real/<city>/', defaults={'route': None}, strict_slashes=False)
 @v1_api.route('/v1/real/<city>/<route>/', strict_slashes=False)
 def real(city, route):
     """取得該城市符合條件的所有路線定位資料"""
     return jsonify(v1_real.main(city, route))
 
 
-@v1_api.route('/v1/time/<city>/', defaults={'route': None}, strict_slashes=False)
 @v1_api.route('/v1/time/<city>/<route>/', strict_slashes=False)
 def time(city, route):
     """取得該城市符合條件的所有路線時間資料"""
